# notes2tasks

./: .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dockerfile  README.md  api.py  app.py  docker-compose.yml  fix.py  meetings.db  mkdocs.yml  patch_app.py  pyproject.toml  sitemap.xml  test_run.py
.github/workflows/: ci.yml  docs.yml
README_FULL/: index.html
agent_interaction_diagram/: index.html
architecture/: index.html
docs/: README_FULL.md
evaluation_report/: index.html
search/: search_index.json
src/: __main__.py  orchestrator.py  state_machine.py
src/agents/: agents.py  baseline_single_agent.py
src/utils/: guardrails.py  logging_utils.py  tools.py
tests/: test_agents.py  test_parser.py  test_tools.py
